Consider all sided for type check